# Hermas

./: .coverage  .env.example  .gitignore  AUTH_SETUP.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml
data/: hermas.db  solomon.db
deploy/: nginx.conf
example_skills/code-reviewer/: SKILL.md
example_skills/executive-summarizer/: SKILL.md
example_skills/python-expert/: SKILL.md
example_skills/qa-assistant/: SKILL.md
example_skills/resume-classifier/: SKILL.md
example_skills/technical-writer/: SKILL.md
public/: app.css  app.js  index.html
src/hermas/: config.py  database.py  main.py
src/hermas/api/: chat.py  conversations.py  dependencies.py  health.py  mcp.py  sessions.py  skills.py
src/hermas/middleware/: error_handler.py
src/hermas/models/: conversation.py  mcp_server.py  (+2 more)
src/solomon/: __init__.py  config.py  database.py  main.py
tests/: conftest.py  test_chat_service.py  test_chat_service_full.py  test_chat_service_stream.py  test_config.py  test_conversation_service.py  test_database.py  test_database_full.py  test_dependencies.py  test_llm_client.py  test_llm_client_full.py  test_main.py  test_mcp_client.py  test_mcp_client_full.py  test_mcp_service.py  test_middleware.py  test_prompt_builder.py  test_prompt_builder_full.py  test_schemas.py  test_session_service.py  test_skill_routing.py  test_skill_routing_full.py  test_skill_service.py  test_stream_formatter.py
tests/api/: test_chat_api.py  test_conversations_api.py  test_health_api.py  test_mcp_api.py  test_sessions_api.py  test_skills_api.py
(+38 files in other folders)
