[project]
name = "hermas"
version = "0.1.0"
description = "Production-ready conversational AI assistant with skills, MCP tool integration, and conversation persistence."
authors = [{ name = "AbrJA", email = "abraham.jaimes.mx@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.6",
    "openai>=1.50",
    "httpx>=0.27",
    "sse-starlette>=2.1",
    "structlog>=24.4",
    "alembic>=1.14",
    "python-multipart>=0.0.12",
]

[project.scripts]
hermas = "hermas.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "pytest-cov>=6.0",
    "factory-boy>=3.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hermas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF002", "RUF003", "N815", "RUF005", "SIM117"]

[tool.coverage.run]
source = ["hermas"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
